Fixed installation, improved makefiles and renaming

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,42 @@
 cmake_minimum_required(VERSION 2.8.12)
-project(MSMRD2)
+project(msmrd2)
+
+#set c++14 std for old compilers
+macro(use_cxx14)
+    if (CMAKE_VERSION VERSION_LESS "6.3")
+        set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+    endif ()
+endmacro(use_cxx14)
+use_cxx14()
 
 #include_directories(include)
-set(SOURCE_FILES include/quaternion.h include/vec3.h src/binding.cpp)
 include_directories(include)
 add_subdirectory(libraries/pybind11)
 set(bindings_python_version 3.6)
-add_library(msmrd2core SHARED src/simulation.cpp src/integrator.cpp include/quaternion.h include/vec3.h include/particle.h include/simulation.h include/integrator.h)
-pybind11_add_module(msmrd2binding src/binding.cpp include/quaternion.h include/vec3.h include/particle.h include/simulation.h include/integrator.h)
-target_link_libraries(msmrd2binding PUBLIC msmrd2core)
+set(SOURCES
+        src/simulation.cpp
+        src/integrator.cpp
+        include/quaternion.hpp
+        include/vec3.hpp
+        include/particle.hpp
+        include/simulation.hpp
+        include/integrator.hpp)
+
+set(PY_SOURCES
+        src/binding.cpp
+        include/quaternion.hpp
+        include/vec3.hpp
+        include/particle.hpp
+        include/simulation.hpp
+        include/integrator.hpp
+)
+
+add_library(msmrd2core SHARED ${SOURCES})
+pybind11_add_module(msmrd2 ${PY_SOURCES})
+#target_link_libraries(msmrd2pybind PRIVATE MSMRD2)
+target_link_libraries(msmrd2 PUBLIC msmrd2core)
+
+#EXECUTE_PROCESS(COMMAND git submodule update --init WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_library(catch2 INTERFACE)
 target_include_directories(catch2 INTERFACE "libraries/Catch2/single_include")
