Refactor setup into one main package

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,8 @@ macro(use_cxx14)
 endmacro(use_cxx14)
 use_cxx14()
 
+FIND_PROGRAM(PYTHON "python")
+
 #include_directories(include)
 include_directories(include)
 add_subdirectory(libraries/pybind11)
@@ -16,11 +18,12 @@ set(bindings_python_version 3.6)
 set(SOURCES
         src/simulation.cpp
         src/integrator.cpp
-        include/quaternion.hpp
-        include/vec3.hpp
-        include/particle.hpp
-        include/simulation.hpp
-        include/integrator.hpp)
+#        include/quaternion.hpp
+#        include/vec3.hpp
+#        include/particle.hpp
+#        include/simulation.hpp
+#        include/integrator.hpp
+        )
 
 set(PY_SOURCES
         src/binding.cpp
@@ -32,8 +35,11 @@ set(PY_SOURCES
 )
 
 add_library(msmrd2core SHARED ${SOURCES})
-pybind11_add_module(msmrd2 MODULE ${PY_SOURCES})
-target_link_libraries(msmrd2 PUBLIC msmrd2core)
+#target_include_directories(msmrd2core PUBLIC include libraries/pybind11/include)
+
+pybind11_add_module(msmrd2binding MODULE ${PY_SOURCES})
+#target_include_directories(msmrd2 PUBLIC include libraries/pybind11/include)
+target_link_libraries(msmrd2binding PUBLIC msmrd2core)
 
 #EXECUTE_PROCESS(COMMAND git submodule update --init WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(catch2 INTERFACE)
