Refactor pybound code into modules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,24 +19,32 @@ set(SOURCES
         src/integrators/integrator.cpp
         src/msm.cpp
         src/randomgen.cpp
-        src/potentials/potential.cpp
         src/integrators/integrator.cpp
         src/integrators/odLangevin.cpp
         src/integrators/odLangevinMarkovSwitch.cpp
         src/potentials/gaussians3D.cpp
-        src/potentials/harmonicRepulsion.cpp)
+        src/potentials/harmonicRepulsion.cpp
+        )
 
 set(PY_SOURCES
-        src/binding.cpp
+        src/binding/binding.cpp
         include/quaternion.hpp
         include/vec3.hpp
         include/particle.hpp
         include/simulation.hpp
         include/msm.hpp
         include/randomgen.hpp
+        )
+
+set(PY_SOURCES_INTEGRATORS
+        src/binding/bindIntegrators.cpp
         include/integrators/integrator.hpp
         include/integrators/odLangevin.hpp
         include/integrators/odLangevinMarkovSwitch.hpp
+        )
+
+set(PY_SOURCES_POTENTIALS
+        src/binding/bindPotentials.cpp
         include/potentials/potential.hpp
         include/potentials/gaussians3D.hpp
         include/potentials/harmonicRepulsion.hpp
@@ -45,9 +53,17 @@ set(PY_SOURCES
 add_library(msmrd2core SHARED ${SOURCES})
 #target_include_directories(msmrd2core PUBLIC include libraries/pybind11/include)
 
-pybind11_add_module(msmrd2binding MODULE ${PY_SOURCES})
+pybind11_add_module(main MODULE ${PY_SOURCES})
+pybind11_add_module(integrators MODULE ${PY_SOURCES_INTEGRATORS})
+pybind11_add_module(potentials MODULE ${PY_SOURCES_POTENTIALS})
+
+
 #target_include_directories(msmrd2 PUBLIC include libraries/pybind11/include)
-target_link_libraries(msmrd2binding PUBLIC msmrd2core)
+target_link_libraries(main PUBLIC msmrd2core)
+target_link_libraries(integrators PUBLIC msmrd2core)
+target_link_libraries(potentials PUBLIC msmrd2core)
+
+
 
 #EXECUTE_PROCESS(COMMAND git submodule update --init WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 add_library(catch2 INTERFACE)
