--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,11 +27,15 @@ set(SOURCES
         src/potentials/gaussians3D.cpp
         src/potentials/harmonicRepulsion.cpp
         src/potentials/gayBerne.cpp
-        )
+)
 
 set(PY_SOURCES
+        src/binding/binding.hpp
         src/binding/binding.cpp
+        src/binding/bindBoundaries.cpp
         src/binding/bindIntegrators.cpp
+        src/binding/bindMarkovModels.cpp
+        src/binding/bindParticles.cpp
         src/binding/bindPotentials.cpp
         include/boundary.hpp
         include/msm.hpp
