Added patchyPartcile potential for penatmer with constrained angle

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ set(SOURCES
         src/potentials/gayBerne.cpp
         src/potentials/harmonicRepulsion.cpp
         src/potentials/patchyParticle.cpp
+        src/potentials/patchyParticleAngular.cpp
         src/potentials/patchyProtein.cpp
         src/potentials/patchyProteinMarkovSwitch.cpp
         src/potentials/potentials.cpp
@@ -74,6 +75,7 @@ set(PY_SOURCES
         include/potentials/gayBerne.hpp
         include/potentials/harmonicRepulsion.hpp
         include/potentials/patchyParticle.hpp
+        include/potentials/patchyParticleAngular.hpp
         include/potentials/patchyProtein.hpp
         include/potentials/patchyProteinMarkovSwitch.hpp
         include/trajectories/trajectory.hpp
