--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,8 +42,8 @@ set(SOURCES
         src/potentials/patchyProteinMarkovSwitch.cpp
         src/potentials/potentials.cpp
         src/trajectories/patchyDimer.cpp
-        src/trajectories/trajectory.cpp
-        )
+        src/tools.cpp
+        src/trajectories/trajectory.cpp)
 
 set(PY_SOURCES
         src/binding/binding.hpp
