Fix confliction HDF5 installtions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,15 @@ FIND_PROGRAM(PYTHON "python")
 
 # Find and add headers location of HDF5 library
 # Uncomment to manually specify HDF5 installation directory (useful when multiple installations available)
-#set(ENV{HDF5_DIR} "/srv/public/maojrs/miniconda3/envs/msmrd-dev/include/") 
+# Set HDF5 root dir to conda prefix if it is set. This avoids conflicts if there is a system and a conda installation of HDF5.
+if(DEFINED ENV{CONDA_PREFIX})
+	message(STATUS "Found active Conda environment. Setting HDF5_ROOT to conda prefix")
+	set(ENV{HDF5_ROOT} $ENV{CONDA_PREFIX})
+endif()
 find_package(HDF5 COMPONENTS CXX)
-message(STATUS "HDF5_FOUND: ${HDF5_FOUND}, version ${HDF5_VERSION}, directory ${HDF5_INCLUDE_DIRS}")
-include_directories(${HDF5_INCLUDE_DIR})
-
+message(STATUS "HDF5_FOUND: ${HDF5_FOUND}, version ${HDF5_VERSION}, include directory ${HDF5_INCLUDE_DIRS}, library directory ${HDF5_LIBRARIES}, C++ library directory ${HDF5_CXX_LIBRARIES}")
+# this had to be changed in order for this to work
+include_directories(${HDF5_INCLUDE_DIRS}) 
 # Set include and source
 include_directories(include)
 add_subdirectory(libraries/pybind11)
