--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(SOURCES
         src/boundaries/box.cpp
         src/boundaries/sphere.cpp
         src/discretizations/halfSpherePartition.cpp
+        src/discretizations/positionOrientationPartition.cpp
         src/discretizations/quaternionPartition.cpp
         src/discretizations/spherePartition.cpp
         src/integrators/integrator.cpp
@@ -83,6 +84,7 @@ set(PY_SOURCES
         include/boundaries/box.hpp
         include/boundaries/sphere.hpp
         include/discretizations/halfSpherePartition.hpp
+        include/discretizations/positionOrientationPartition.hpp
         include/discretizations/quaternionPartition.hpp
         include/discretizations/spherePartition.hpp
         include/integrators/integrator.hpp
