--- a/tests/cpp/CMakeLists.txt
+++ b/tests/cpp/CMakeLists.txt
@@ -3,6 +3,7 @@ set(TEST_SOURCES
         testDiscretizations.cpp
         testMarkovModels.cpp
         testPotentials.cpp
+        testTools.cpp
         testTrajectories.cpp
         )
 
@@ -11,8 +12,8 @@ add_executable(test_executable ${TEST_SOURCES})
 target_link_libraries(test_executable catch2 msmrd2core)
 
 target_include_directories(test_executable PUBLIC
-        include/quaternion.h
-        include/vec3.h
-        include/particle.h
-        include/simulation.h
-        include/integrator.h)
+        include/quaternion.hpp
+        include/vec3.hpp
+        include/particle.hpp
+        include/simulation.hpp
+        include/integrator.hpp)
