--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(SOURCES
         src/potentials/harmonicRepulsion.cpp
         src/potentials/patchyParticle.cpp
         src/potentials/patchyParticleAngular.cpp
+        src/potentials/patchyParticleAngular2.cpp
         src/potentials/patchyProtein.cpp
         src/potentials/patchyProteinMarkovSwitch.cpp
         src/potentials/potentials.cpp
@@ -111,6 +112,7 @@ set(PY_SOURCES
         include/potentials/harmonicRepulsion.hpp
         include/potentials/patchyParticle.hpp
         include/potentials/patchyParticleAngular.hpp
+        include/potentials/patchyParticleAngular2.hpp
         include/potentials/patchyProtein.hpp
         include/potentials/patchyProteinMarkovSwitch.hpp
         include/trajectories/trajectory.hpp
